(executable
 (name demo)
 (modes js)
 (libraries timedesc
            timedesc.tzdb.full
            timedesc.tzlocal.none
            timere
            timere-parse
            js_of_ocaml
            oseq
 )
 (flags       (-w "+a-4-29-32-37-40-42-44-48-50"))
 (preprocess (pps js_of_ocaml-ppx lwt_ppx)))

(alias
 (name js)
 (deps demo.bc.js))
